Fix: Remove download button on mobile
Also fixes a few styles

--- a/src/components/Item/NameCell.scss
+++ b/src/components/Item/NameCell.scss
@@ -4,4 +4,5 @@
     line-height: 15px;
     overflow: hidden;
     text-align: left;
+    text-overflow: ellipsis;
 }
